[gd_scene load_steps=2 format=3 uid="uid://enjyp2dpwiju"]

[ext_resource type="Script" uid="uid://ddwq76ogmnvmq" path="res://Scripts/registration_page.gd" id="1_q3np0"]

[node name="RegistrationPage" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.00682, 0.996528)
script = ExtResource("1_q3np0")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="logout" type="Button" parent="Panel"]
layout_mode = 0
offset_left = 36.7494
offset_top = 50.1742
offset_right = 107.749
offset_bottom = 82.1742
text = "Log Out"

[node name="StateLabel" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -148.0
offset_top = 48.0
offset_right = 5813.0
offset_bottom = 1018.0
grow_horizontal = 2
scale = Vector2(0.05, 0.05)
theme_override_font_sizes/font_size = 200
text = "Register Page"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Panel2" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -140.0
offset_top = -200.0
offset_right = 140.0
offset_bottom = 248.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="Panel2"]
layout_mode = 1
offset_left = 24.0
offset_top = 16.0
offset_right = 984.0
offset_bottom = 976.0
scale = Vector2(0.05, 0.05)
theme_override_font_sizes/font_size = 200
text = "E-mail"
justification_flags = 161

[node name="email" type="LineEdit" parent="Panel2"]
layout_mode = 0
offset_left = 16.0
offset_top = 72.0
offset_right = 264.0
offset_bottom = 108.0
scale = Vector2(1, 1.08654)
placeholder_text = "email please?"
alignment = 1
max_length = 35
context_menu_enabled = false
emoji_menu_enabled = false

[node name="Label2" type="Label" parent="Panel2"]
layout_mode = 1
offset_left = 24.0
offset_top = 136.0
offset_right = 984.0
offset_bottom = 1096.0
scale = Vector2(0.05, 0.05)
theme_override_font_sizes/font_size = 200
text = "Password"
justification_flags = 161

[node name="password_label" type="LineEdit" parent="Panel2"]
layout_mode = 0
offset_left = 16.0
offset_top = 192.0
offset_right = 264.0
offset_bottom = 228.0
placeholder_text = "remember this magic word"
alignment = 1
max_length = 20
context_menu_enabled = false
emoji_menu_enabled = false

[node name="register" type="Button" parent="Panel2"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 28.0
offset_top = -78.2998
offset_right = 160.0
offset_bottom = 1.70023
grow_horizontal = 2
grow_vertical = 0
scale = Vector2(0.593481, 0.563818)
theme_override_font_sizes/font_size = 54
text = "✓"

[node name="Cancel" type="Button" parent="Panel2"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -108.0
offset_top = -78.2998
offset_right = 24.0
offset_bottom = 1.70023
grow_horizontal = 2
grow_vertical = 0
scale = Vector2(0.593481, 0.563818)
theme_override_font_sizes/font_size = 54
text = "✕"

[connection signal="pressed" from="Panel/logout" to="." method="_on_logout_pressed"]
[connection signal="pressed" from="Panel2/register" to="." method="_on_register_pressed"]
